--- a/Monitoreo/packages.config
+++ b/Monitoreo/packages.config
@@ -41,6 +41,8 @@
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Postal.Mvc4" version="1.2.0" targetFramework="net45" />
+  <package id="RazorEngine" version="3.3.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
