--- a/Monitoreo/Monitoreo.csproj
+++ b/Monitoreo/Monitoreo.csproj
@@ -1230,6 +1230,7 @@
     <Content Include="Views\Emails\_ViewStart.cshtml" />
     <Content Include="Views\Emails\EmailActividadBorrar.cshtml" />
     <Content Include="Views\Emails\EmailEvaluacionAcompanamiento.cshtml" />
+    <Content Include="Views\PersonalAdministrativo\PersonalAdministrativoDetailsAcompanante.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
