--- a/Monitoreo/packages.config
+++ b/Monitoreo/packages.config
@@ -3,6 +3,8 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.0.2" targetFramework="net45" />
+  <package id="Coypu" version="2.10.0" targetFramework="net45" />
+  <package id="Coypu.NUnit" version="1.1.0" targetFramework="net45" />
   <package id="elmah" version="1.2.2" targetFramework="net45" />
   <package id="Elmah.Contrib.Mvc" version="2.1" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
@@ -40,10 +42,13 @@
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.17" targetFramework="net45" />
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Postal.Mvc4" version="1.2.0" targetFramework="net45" />
   <package id="RazorEngine" version="3.3.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="Selenium.Support" version="2.48.0" targetFramework="net45" />
+  <package id="Selenium.WebDriver" version="2.48.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
